# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.723 2008-07-23 22:54:57 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.1 (2008/??/??)
 - (2008/07/21) Fixed bug# 3117 - Auto increment of "id" in article_search
    table is not needed.
 - (2008/07/21) Fixed bug# 3104 - If new config can't get created by
    scripts/DBUpdate-to-2.3.pl, the script need to stop.

2.3.0 rc1 (2008/07/21)
 - (2008/07/20) Update persian translation, thanks to Amir Shams Parsa and
    Hooman Mesgary!
 - (2008/07/20) Fixed bug# 2712 - Email in POP3 or IMAP box gets deleted/lost
    also if it got not processed.
 - (2008/07/20) Added Ingres database files for Ingres 2006 R3 experimental support.
 - (2008/07/20) Fixed bug# 3102 - (Optional) group-Permissions for
    Frontend::Agent::Ticket::MenuModule(Pre).
 - (2008/07/19) Fixed bug# 3098 - Ticket number search in the new link mask does
    not work correctly.
 - (2008/07/19) Fixed bug# 3093 - Foreign Key drop does not work.
 - (2008/07/19) Fixed bug# 2826 - Impossible to use DEFAULT values in SOPM
    files.
 - (2008/07/18) Fixed bug# 2893 - Allow translation texts with new lines.
 - (2008/07/17) Integrate function StatsCleanUp().
 - (2008/07/16) Fixed bug# 3089 - Stats module creates an error log entry with
    message "Got no SessionID" .
 - (2008/07/16) Fixed bug# 3088 - Statistics module fails with
    message "Got no AccessRw" if you work with ro permissions
 - (2008/07/16) Fixed bug# 3012 - Statistics module fails with
    message "Got no UserLanguage"
 - (2008/07/15) Moved config option PostMasterMaxEmailSize default 12 MB
    to 16 MB.
 - (2008/07/15) Fixed bug# 3082 - Wrong requirement checks and false default
    handling in function QueueAdd and QueueUpdate.